# stock-volatility-cpp

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: csvUtils.hpp  graphUtils.hpp  myHeader.hpp  volatilityUtils.hpp
src/: graph.cpp  main.cpp  open_csv.cpp  volatility.cpp
